# thesis

./: .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  LICENSE.md  RESULTS_SUMMARY.md  compare_boltzmann_results.sh  compare_schelling_results.sh  compare_temperature_results.sh  compare_virus_results.sh  compare_wolfsheep_results.sh  main.py  pyproject.toml  run_boltzmann_multiseed.sh  run_boltzmann_temperature.sh  run_multiseed_comparison.sh  run_schelling_multiseed.sh  run_schelling_temperature.sh  run_temperature_experiments.sh  run_virus_multiseed.sh  run_virus_temperature.sh  run_wolfsheep_multiseed.sh  run_wolfsheep_temperature.sh
src/agents/: base.py  (+1 more)
summaries/: boltzmann_results_boltzmann_gpt_4o_mini_temp0_0_decisions.md  boltzmann_results_boltzmann_gpt_4o_mini_temp0_3_decisions.md  boltzmann_results_boltzmann_gpt_4o_mini_temp0_7_decisions.md  schelling_results_schelling_gpt_4o_mini_temp0_0_decisions.md  schelling_results_schelling_gpt_4o_mini_temp0_3_decisions.md  schelling_results_schelling_gpt_4o_mini_temp0_7_decisions.md  sugarscape_results_multiseed_gpt_4o_mini_temp0_0_decisions.md  sugarscape_results_multiseed_gpt_4o_mini_temp0_3_decisions.md  sugarscape_results_multiseed_gpt_4o_mini_temp0_7_decisions.md  virus_results_virus_gpt_4o_mini_temp0_0_decisions.md  virus_results_virus_gpt_4o_mini_temp0_3_decisions.md  virus_results_virus_gpt_4o_mini_temp0_7_decisions.md  wolfsheep_results_wolfsheep_gpt_4o_mini_temp0_0_decisions.md  wolfsheep_results_wolfsheep_gpt_4o_mini_temp0_3_decisions.md  wolfsheep_results_wolfsheep_gpt_4o_mini_temp0_7_decisions.md
(+29 files in other folders)
